# tm-admin

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Dockerfile  Doxyfile  Doxyfile.bak  Makefile  Makefile~  README.md  about.md~  backend.md~  build.md~  communication.md~  configuring.md~  dataexchange.md~  dataflow.md~  docker-compose.yml  endpoints.md~  generator.md~  importing.md~  index.html  mkdocs.yml  objects.inv  pgasync.md~  pgsupport.md~  protos-api.html  pyproject.toml  roles.md~  schema.md~  sitemap.xml  structure.md~  testapi.md~  tm-fmtm.odg  tmadmin-manage.md~  tmbackend.md~  tmdb.md~  tmschema.md~  tmtables.odg
.github/: labeler.yml
.github/workflows/: build.yml  docs.yml  pytest.yml
CHANGELOG/: index.html
E2E/: Makefile
LICENSE/: index.html
about/: index.html
api/: index.html
api/campaigns/: index.html
api/messages/: index.html
api/organizations/: index.html
api/projects/: index.html
api/tasks/: index.html
api/users/: index.html
apidocs/html/: ____init_____8py_source.html  ____version_____8py_source.html  annotated.html  campaigns_2api_8py_source.html  campaigns_8py_source.html  campaigns__class_8py_source.html  campaigns__pb2_8py_source.html  campaigns__pb2__grpc_8py_source.html  campaigns__proto_8py_source.html  classapi_1_1CampaignsAPI-members.html  classapi_1_1CampaignsAPI.html  classapi_1_1CampaignsAPI__coll__graph.dot  classapi_1_1CampaignsAPI__coll__graph.map  classapi_1_1CampaignsAPI__coll__graph.md5  classapi_1_1CampaignsAPI__inherit__graph.map  classapi_1_1CampaignsAPI__inherit__graph.md5  classapi_1_1CampaignsAPI_a1627c55a16dd8c960912d3e513387edf_cgraph.dot  classapi_1_1CampaignsAPI_a183da419df5a3550d9aa025a2fc5ccfa_cgraph.map  classapi_1_1CampaignsAPI_a183da419df5a3550d9aa025a2fc5ccfa_cgraph.md5  classapi_1_1CampaignsAPI_a40227a76daf6935ee53c2a01f4e61659_cgraph.map  classapi_1_1CampaignsAPI_a40227a76daf6935ee53c2a01f4e61659_cgraph.md5  classapi_1_1CampaignsAPI_a56bc5ec77c687c1af9be7413506b47bc_cgraph.map  classapi_1_1CampaignsAPI_a56bc5ec77c687c1af9be7413506b47bc_cgraph.md5  classapi_1_1CampaignsAPI_a56bc5ec77c687c1af9be7413506b47bc_icgraph.map  classapi_1_1CampaignsAPI_a56bc5ec77c687c1af9be7413506b47bc_icgraph.md5  classapi_1_1CampaignsAPI_a716c0dde7941214977bbd7f10d84f379_cgraph.map  classapi_1_1CampaignsAPI_a716c0dde7941214977bbd7f10d84f379_cgraph.md5  classapi_1_1CampaignsAPI_ac9113d809d8e756d7e87bc8fc8c48442_cgraph.dot  classapi_1_1MessagesAPI-members.html  classapi_1_1MessagesAPI.html  classapi_1_1MessagesAPI__coll__graph.map  classapi_1_1MessagesAPI__coll__graph.md5  classapi_1_1MessagesAPI__inherit__graph.dot  classapi_1_1MessagesAPI__inherit__graph.md5  classapi_1_1MessagesAPI_a068dbe65ab9583589a57d04fba2e6e7f_cgraph.dot  classapi_1_1MessagesAPI_a277fdcb70780786133490e4d3f3c75cd_cgraph.map  classapi_1_1MessagesAPI_a277fdcb70780786133490e4d3f3c75cd_cgraph.md5  classapi_1_1MessagesAPI_a650ace1f75b942437821ee4481fbd8a1_cgraph.dot  classapi_1_1MessagesAPI_a74abeec21cca648cf7113c49c5fa67a4_cgraph.map  classapi_1_1MessagesAPI_a74abeec21cca648cf7113c49c5fa67a4_cgraph.md5  (+879 more)
backend/: index.html
communication/: index.html
configuring/: index.html
dataexchange/: index.html
dataflow/: index.html
docs/: Doxyfile  Makefile  about.md  api.md  build.md  communication.md  configuring.md  dataexchange.md  dataflow.md  endpoints.md  generator.md  getting_started.md  importing.md  index.md  pgasync.md  pgsupport.md  protos-api.md  protos.html  roles.md  schema.md  structure.md  tmadmin-manage.md  tmdb.md  tmschema.md  wiki_redirect.md
docs/api/: campaigns.md  messages.md  organizations.md  projects.md  tasks.md  users.md
endpoints/: index.html
generator/: index.html
getting_started/: index.html
importing/: index.html
pgasync/: index.html
pgsupport/: index.html
protos-api/: index.html
roles/: index.html
schema/: index.html
search/: search_index.json
structure/: index.html
tests/: Makefile  __init__.py  conftest.py  create.py  pylintrc  test_campaigns.py  test_dbsupport.py  test_messages.py  test_notifications.py  test_orgs.py  test_placeholder.py  test_projects.py  test_roles.py  test_stats.py  test_tasks.py  test_teams.py  test_users.py  test_validation.py  test_yamlfile.py  testdata.sql  testschema.sql  tmorganizations.sql  tmprojects.sql  tmtasks.sql  tmteams.sql  tmusers.sql
tm_admin/: .gitignore  CHANGELOG.md  Makefile  __version__.py  access.py  dbsupport.py  fmtmroles.yaml  generator.py  homepage.yaml  pgsupport.py  proto.py  requests.proto  schemas.sql  services.proto  services.yaml  tmadmin-manage.py  tmadmin_manage.py  tmclient.py  tmdb.py  tmroles.yaml  tmserver.py  types.sql  types.yaml  yamlfile.py
tm_admin/campaigns/: api.py  campaigns.py  campaigns.yaml
tmadmin-manage/: index.html
tmbackend/: index.html
tmdb/: index.html
tmschema/: index.html
wiki_redirect/: index.html
(+100 files in other folders)
