[project]
name = "tm-admin"
dynamic = ["version"]
description = "Administrative modules for Tasking Manager style projects."
authors = [
    {name = "Rob Savoye", email = "rob.savoye@hotosm.org"},
]
dependencies = [
    "psycopg2>=2.9.1",
    "grpcio>=1.32.0",
    "grpcio-reflection>=1.32.0",
    "grpcio-status>=1.32.0",
    "grpcio-tools>=1.32.0",
    "grpc-interceptor>=0.15.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["hot"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://hotosm.github.io/tm-admin"
documentation = "https://hotosm.github.io/tm-admin"
repository = "https://github.com/hotosm/tm-admin"

[build-system]
requires = ["pdm-pep517>=1.1.4"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "tm_admin"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "tm_admin/__version__.py",
]

[tool.pdm]
version = {from = "tm_admin/__version__.py"}
[tool.pdm.build]
includes = ["tm_admin"]
source-includes = ["tests", "LICENSE.md", "README.md"]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "commitizen>=3.6.0",
    "pre-commit>=3.3.3",
]
debug = [
    "ipdb>=0.13.13",
    "debugpy>=1.8.0",
]
test = [
    "pytest>=7.4.3",
    "pytest-grpc>=0.8.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-exclude>=1.0.2",
]

# [tool.setuptools.package-data]
# myModule = ["*.py"]

[tool.black]
line-length = 132
target-versions = ["py310", "py311"]

[tool.ruff]
fix = true
line-length = 132
target-version = "py310"
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "tm_admin/__version__.py",
]
[tool.ruff.pydocstyle]
convention = "google"

[project.scripts]
tmadmin-manage = "tm_admin.tmadmin-manage:main"
